--- a/client/src/prices/styles.css
+++ b/client/src/prices/styles.css
@@ -36,7 +36,7 @@
 }
 
 .steps{
-    font-size: 30px;
+    font-size: 35px;
     text-align: left;
     margin-left: 15%;
     padding: 4%
@@ -44,6 +44,7 @@
 .pricesTitle{
     font-size: 65px;
     color: #3B4045;
+    margin-left: 15px;
 }
 
 .prices-content{
