support for a second address

--- a/client/src/homepageQuote/styles.css
+++ b/client/src/homepageQuote/styles.css
@@ -59,9 +59,9 @@ label{
     margin-top: -1%
 }
 
-.quoteTitleFix{
+/* .quoteTitleFix{
     margin-top: -5%
-}
+} */
 
 .quoteHeader{
     color: white;
