--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@ body {
 
 .title{
   font-family: 'Open Sans', sans-serif;
-  font-size: 65px;
+  font-size: 3.2rem;
   font-weight: bold;
   color: #3B4045;
 }
