--- a/client/src/prices/styles.css
+++ b/client/src/prices/styles.css
@@ -39,7 +39,8 @@
     font-size: 3rem;
     text-align: left!important;
     margin-left: 15%;
-    padding: 4%
+    padding: 4%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .steps-content{
