--- a/client/src/homepageQuote/styles.css
+++ b/client/src/homepageQuote/styles.css
@@ -10,14 +10,34 @@
 }
 
 input, select{
-    flex: 1;
+    flex: 1 1;
     width: 100%;
     height: 25px;
-    border-radius: 10px;
-    border: 1px solid white;
-    background-color: #FFF0DF;
+    border: none;
+    border-bottom: 3px solid #34383D;
+    background-color: transparent;
     font-size: 18px;
+}
 
+
+input:focus{
+    border-color: transparent;
+    border-bottom: 4px solid #9DA8B4;
+    border-top: 4px solid #9DA8B4;
+    transition: all .5s ease;
+    outline-width: 0;
+}
+
+select:focus{
+    border-color: transparent;
+    border-bottom: 4px solid #9DA8B4;
+    border-top: 4px solid #9DA8B4;
+    transition: all .5s ease;
+    outline-width: 0;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px white inset;
 }
 
 
