--- a/client/src/about/styles.css
+++ b/client/src/about/styles.css
@@ -10,6 +10,17 @@
     margin-top: 30px;
 }
 
+.super-title{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 3.5rem;
+    font-weight: bold;
+    padding: 35px;
+    position: relative;
+    z-index: 999;
+    color: #001F3D;
+    text-align: left;
+}
+
 .panel-title{
     font-family: 'Open Sans', sans-serif;
     font-size: 2rem;
@@ -34,6 +45,15 @@
     height: 250px;
 }
 
+.panel-animation:hover{
+    transform: scale(1.05);
+    transition: all 1s ease;
+    cursor: pointer;
+    -webkit-box-shadow: -2px 2px 13px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: -2px 2px 13px -1px rgba(0,0,0,0.75);
+    box-shadow: -2px 2px 13px -1px rgba(0,0,0,0.75);
+}
+
 .self-storage-section{
     background: url('../images/storage.jpg') no-repeat center center; 
     -webkit-background-size: cover;
@@ -42,6 +62,19 @@
     background-size: cover;
     position: relative;
 }
+
+.self-storage-section:hover:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 280px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(88, 135, 255, 0.9);
+  }
+
 
 .self-storage-section:after {
     content: " ";
@@ -55,6 +88,73 @@
     background: rgba(0, 0, 0, 0.7);
   }
 
+  .gilagoat-storage-section{
+    background: url('../images/gilagoat.png') no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: relative;
+}
+
+.gilagoat-storage-section:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 280px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+  }
+
+  .gilagoat-storage-section:hover:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 280px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(88, 135, 255, 0.9);
+  }
+
+  .boinglebox-storage-section{
+    background: url('../images/container1.jpg') no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: relative;
+}
+
+.boinglebox-storage-section:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 280px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+  }
+
+  .boinglebox-storage-section:hover:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 280px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(88, 135, 255, 0.9);
+  }
+
+
   .boat-storage-section{
     background: url('../images/boat-service.jpg') no-repeat center center; 
     -webkit-background-size: cover;
@@ -63,6 +163,7 @@
     background-size: cover;
     position: relative;
 }
+
 
 .boat-storage-section:after {
     content: " ";
@@ -76,6 +177,18 @@
     background: rgba(0, 0, 0, 0.7);
   }
 
+
+  .boat-storage-section:hover:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 280px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(88, 135, 255, 0.9);
+  }
   .rv-storage-section{
     background: url('../images/rv-service.jpg') no-repeat center center; 
     -webkit-background-size: cover;
@@ -95,4 +208,23 @@
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.7);
+  }
+
+  .rv-storage-section:hover:after {
+    content: " ";
+    z-index: 10;
+    display: block;
+    position: absolute;
+    height: 280px;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(88, 135, 255, 0.9);
+  }
+
+  .about-text{
+      color: grey;
+      font-size: 1.2rem;
+      font-family: 'PT Sans', sans-serif;
+      padding-bottom: 20px;
   }
